<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:id="@+id/question_text_view"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/true_button"
            android:id="@+id/true_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/false_button"
            android:id="@+id/false_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cheat_button"
        android:text="@string/cheat_text"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/previous_button"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/previous_image_button_description"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next_button"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/next_image_button_description"
            />

    </LinearLayout>

    <LinearLayout android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/alter_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alter_user_data"
            android:layout_marginStart="16dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alter_question_data"
            android:id="@+id/alter_question_data"
            />
    </LinearLayout>

</LinearLayout>