<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateQuestionFragment"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="16dp"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_question_label"
        android:inputType="text"
        style="?android:editTextPreferenceStyle"
        android:id="@+id/create_question_field"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_label"
        style="?android:listSeparatorTextViewStyle"
        />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/answer_radio_group"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_button"
                android:layout_margin="5dp"
                android:id="@+id/true_radio_button"
                android:layout_gravity="left|center"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_button"
                android:layout_margin="5dp"
                android:id="@+id/false_radio_button"
                android:layout_gravity="right|center"
                />
        </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_label"
        android:padding="20dp"
        android:id="@+id/submit_created_question"
        />

</LinearLayout>